Closed
Bug 11600
Opened 26 years ago
Closed 26 years ago
Create NCI button does not open a sample NCI file
Categories
(CCK Graveyard :: CCK-General, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: bijals, Assigned: vparthas)
References
Details
Steps:
1) Went to PoPs wizard screen
2) Clicked on CREATE button
3) Type new file name to be "bijal.nci"
4) Said yes to Create New fild dialog
Actual Behavior: Notepad opened a blank text file
Expected Behavior: Notepad opens a sample NCI file to be saved under the new
name I gave it ("bijal.nci")
Build Date/Platform: 8/10/99 on Win98
Reporter | ||
Comment 1•26 years ago
|
||
Another related problem:
Steps:
4) During step 4 below, if I click "no" for do not create this NCI file.
Actual Behavior: Notepad displayed a blank document.
Expected Behavior: All dialogs close and I am back to Pops wizard screen.
Updated•26 years ago
|
Assignee: selmer → racham
Priority: P3 → P2
Target Milestone: M11
Using Latest CCK build dated: 08-10-99
I. Here's the behavior that I experienced on Win98:
1-Selected Create button on the Internet Setup Pop. Create nci file dialog
appears.
2-Entered bijal.nci in the text field and selected Create button. I was
immediately presented with the following dialog: "Notepad: Cannot find the
C:\latestcck\cck\ncifiles\bijal.nci file. Do you want to create a new file? Yes
/No (button choices)
3-Select Yes button.
Results:
Notepad opens with bijal.nci specified in the title bar. However, there is no
sample .nci text prefilled in this notepad window.
II. Here's the behavior that I experienced on WinNT4.0:
1-Selected Create button on the Internet Setup Pop. Create nci file dialog
appears.
2-Entered bijal.nci in the text field and selected Create button.
Results:
Notepad opens immediately with bijal.nci specified in the text field. The
sample .nci text is present within this bijal.nci notepad window. (WinNT4.0)
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
the sample NCI file i.e. the NCITemplate has to be copied over to the current
working directory of the wizardmachine.exe- as also if you create a NCIFILES
directory beneath your configuration - all the new files will be dumped there.
marking this Verified Fixed with respect to opening NCI file in notepad.
Reopening this based on latest cck build dated: 12-21-99
New NCI file is missing template data.
I am not seeing this on the build dated 12/21/99 -Brent if you are seeing this
only on Windows 98 or 95 please change the platform to either one of those
rather than it being on default NT and it would also be helpful if you could
mention that in the summary additional comments area( In case we dont notice the
platform )
I should have added that this is happening on Win98. Sorry about that.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
This problem was caused in win98 and win 95 because of two things
1- we were using cmd.exe which is winnt specific and not command.com which is
the generic one
2- the length of the command matters in command.com(meaning large directory
structures could lead to failing of the copy)
This was solved by using a windows api command (copyfile) - Tah Dah! :-)
No length problems and also common to all platforms
Comment 10•24 years ago
|
||
->CCK-General. Other CCK Components going away.
Component: Dialup-Account Setup → CCK-General
Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•