fix for bug #11600 - have removed the command function and added a new function for copyfile in accountsetup.ini because command.com cannot handle more than certain number of characters -